remove google analytics

--- a/index.html
+++ b/index.html
@@ -1,20 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-34691728-1"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "GA_MEASUREMENT_ID", { anonymize_ip: true });
-    </script>
-
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
@@ -25,31 +11,31 @@
     <title>SonyaSlegers.com</title>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/assets/css/styles.css" />
 
     <!-- JS -->
     <!-- config -->
-    <script src="/js/config.js"></script>
+    <script src="/assets/js/config.js"></script>
 
     <!-- utils -->
-    <script src="/js/utils/utils.js"></script>
+    <script src="/assets/js/utils/utils.js"></script>
 
     <!-- init -->
-    <script src="/js/init.js"></script>
+    <script src="/assets/js/init.js"></script>
 
     <!-- templates -->
-    <script src="/js/templates/home.js"></script>
-    <script src="/js/templates/blog.js"></script>
-    <script src="/js/templates/about.js"></script>
+    <script src="/assets/js/templates/home.js"></script>
+    <script src="/assets/js/templates/blog.js"></script>
+    <script src="/assets/js/templates/about.js"></script>
 
     <!-- controllers -->
-    <script src="/js/controllers/blog.js"></script>
-    <script src="/js/controllers/home.js"></script>
+    <script src="/assets/js/controllers/blog.js"></script>
+    <script src="/assets/js/controllers/home.js"></script>
 
     <!-- views -->
-    <script src="/js/views/home.js"></script>
-    <script src="/js/views/blog.js"></script>
-    <script src="/js/views/about.js"></script>
+    <script src="/assets/js/views/home.js"></script>
+    <script src="/assets/js/views/blog.js"></script>
+    <script src="/assets/js/views/about.js"></script>
   </head>
   <body>
     <div class="container">
