reorganized folder hierarchy, added init function

--- a/index.html
+++ b/index.html
@@ -11,31 +11,31 @@
     <title>SonyaSlegers.com</title>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
 
     <!-- JS -->
     <!-- config -->
-    <script src="/assets/js/config.js"></script>
+    <script src="./assets/js/config.js"></script>
 
     <!-- utils -->
-    <script src="/assets/js/utils/utils.js"></script>
+    <script src="./assets/js/utils/utils.js"></script>
 
     <!-- init -->
-    <script src="/assets/js/init.js"></script>
+    <script src="./assets/js/init.js"></script>
 
     <!-- templates -->
-    <script src="/assets/js/templates/home.js"></script>
-    <script src="/assets/js/templates/blog.js"></script>
-    <script src="/assets/js/templates/about.js"></script>
+    <script src="./assets/js/templates/home.js"></script>
+    <script src="./assets/js/templates/blog.js"></script>
+    <script src="./assets/js/templates/about.js"></script>
 
     <!-- controllers -->
-    <script src="/assets/js/controllers/blog.js"></script>
-    <script src="/assets/js/controllers/home.js"></script>
+    <script src="./assets/js/controllers/blog.js"></script>
+    <script src="./assets/js/controllers/home.js"></script>
 
     <!-- views -->
-    <script src="/assets/js/views/home.js"></script>
-    <script src="/assets/js/views/blog.js"></script>
-    <script src="/assets/js/views/about.js"></script>
+    <script src="./assets/js/views/home.js"></script>
+    <script src="./assets/js/views/blog.js"></script>
+    <script src="./assets/js/views/about.js"></script>
   </head>
   <body>
     <div class="container">
