--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     <div class="container">
       <div id="page-content" class="main-content"></div>
       <nav role="navigation">
-        <a href="#">Home</a>
-        <a href="#">Blog</a>
-        <a href="#">About Me</a>
-        <a href="#" target="_BLANK">Resume</a>
+        <a href="#home">Home</a>
+        <a href="#blog">Blog</a>
+        <a href="#about_me">About Me</a>
+        <a href="#resume" target="_BLANK">Resume</a>
       </nav>
     </div>
   </body>
