--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
 
     <!-- JS -->
+    <script type="text/javascript" src="jquery.js"></script>
+    <script type="text/javascript" src="mustache.js"></script>
     <!-- config -->
     <script src="./assets/js/config.js"></script>
 
