--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
 
     <!-- JS -->
-    <script type="text/javascript" src="jquery.js"></script>
-    <script type="text/javascript" src="mustache.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.js"></script>
+
     <!-- config -->
     <script src="./assets/js/config.js"></script>
 
