simple mustache template for home.html renders correctly

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="./assets/js/init.js"></script>
 
     <!-- templates -->
-    <script src="./assets/js/templates/home.js"></script>
+    <!-- <script src="./assets/js/templates/home.mst"></script> -->
     <script src="./assets/js/templates/blog.js"></script>
     <script src="./assets/js/templates/about.js"></script>
 
