changed home in nav to sonya slegers

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container">
       <div id="page-content" class="main-content"></div>
       <nav role="navigation">
-        <a href="#home">Home</a>
+        <a href="#home">Sonya Slegers</a>
         <a href="#blog">Blog</a>
         <a href="#about_me">About Me</a>
         <a href="#resume" target="_BLANK">Resume</a>
