--- a/index.html
+++ b/index.html
@@ -41,44 +41,15 @@
     <script src="./assets/js/views/blog.js"></script>
     <script src="./assets/js/views/about.js"></script>
   </head>
-  <body>
+  <body id="body">
     <header role="banner">
       <div class="logo-wrapper">
         <h1 class="logo">Sonya Slegers</h1>
         <h1 class="responsive-logo">SS</h1>
       </div>
-      <nav role="navigation">
-        <label for="mobile-nav-menu" class="mobile-nav-sandwich">
-          <div class="top-bar"></div>
-          <div class="middle-bar"></div>
-          <div class="bottom-bar"></div>
-        </label>
-        <div class="nav-overlay">
-          <div class="mobile-nav-menu">
-            <ul class="nav-overlay-links">
-              <li><a href="#home">Portfolio</a></li>
-              <li><a href="#about">About</a></li>
-              <li>
-                <a href="#SonyaSlegersResume082018.pdf" target="_blank"
-                  >Resume</a
-                >
-              </li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="desktop-nav-menu">
-          <a class="nav-link" href="#home">Portfolio</a>
-          <a class="nav-link" href="#about">About</a>
-          <a
-            class="nav-link"
-            href="SonyaSlegersResume082018.pdf"
-            target="_blank"
-            >Resume</a
-          >
-          <a class="nav-link" href="#contact">Contact Me</a>
-        </div>
-      </nav>
+      <div class="navigation-container">
+        <div class="nav-content"></div>
+      </div>
     </header>
     <main>
       <div class="container">
