revert to pre-js-mobile

--- a/index.html
+++ b/index.html
@@ -47,9 +47,25 @@
         <h1 class="logo">Sonya Slegers</h1>
         <h1 class="responsive-logo">SS</h1>
       </div>
-      <div class="navigation-container">
-        <div class="nav-content"></div>
-      </div>
+      <nav role="navigation">
+        <label for="mobileNavMenu" class="mobile-nav-menu">
+          <div class="top-bar"></div>
+          <div class="middle-bar"></div>
+          <div class="bottom-bar"></div>
+        </label>
+        <div class="desktop-nav-menu">
+          <a
+            class="nav-link"
+            href="SonyaSlegersResume082018.pdf"
+            target="_blank"
+            >Resume</a
+          >
+          <a class="nav-link" href="#contact">Contact Me</a>
+          <a class="nav-link" href="#about">About</a>
+          <a class="nav-link" href="#top">Portfolio</a>
+          <a class="nav-link" href="#resume" target="_BLANK">Resume</a>
+        </div>
+      </nav>
     </header>
     <main>
       <div class="container">
