--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
         <h1 class="responsive-logo">SS</h1>
       </div>
       <nav role="navigation">
-        <label for="mobile-nav-menu" class="mobile-nav-sandwich">
+        <label for="mobile-nav-menu" class="mobile-nav-icon">
           <div class="top-bar"></div>
           <div class="middle-bar"></div>
           <div class="bottom-bar"></div>
         </label>
         <div class="nav-overlay">
           <div class="mobile-nav-menu">
-            <ul class="nav-overlay-links">
+            <ul class="mobile-nav-links">
               <li><a href="#home">Portfolio</a></li>
               <li><a href="#about">About</a></li>
               <li>
