--- a/index.html
+++ b/index.html
@@ -47,13 +47,27 @@
         <h1 class="logo">Sonya Slegers</h1>
         <h1 class="responsive-logo">SS</h1>
       </div>
+      <script>
+        function toggleOverlay() {
+          const overlay = document.getElementById("nav-overlay");
+          if (overlay.style.display === "block") {
+            overlay.style.display = "none";
+          } else {
+            overlay.style.display = "block";
+          }
+        }
+      </script>
       <nav role="navigation">
-        <label for="mobile-nav-menu" class="mobile-nav-icon">
+        <label
+          for="mobile-nav-menu"
+          class="mobile-nav-icon"
+          onclick="toggleOverlay()"
+        >
           <div class="top-bar"></div>
           <div class="middle-bar"></div>
           <div class="bottom-bar"></div>
         </label>
-        <div class="nav-overlay">
+        <div class="nav-overlay" id="nav-overlay">
           <div class="mobile-nav-menu">
             <ul class="mobile-nav-links">
               <li><a href="#home">Portfolio</a></li>
