added about template, added onclick function to each nav link

--- a/index.html
+++ b/index.html
@@ -77,27 +77,19 @@
         <div class="nav-overlay" id="nav-overlay">
           <div class="mobile-nav-menu">
             <ul class="mobile-nav-links">
-              <li><a href="#home">Portfolio</a></li>
-              <li><a href="#about">About</a></li>
+              <li><a href="#home" onclick="toggleOverlay()">Portfolio</a></li>
+              <li><a href="#about" onclick="toggleOverlay()">About</a></li>
               <li>
-                <a href="#SonyaSlegersResume082018.pdf" target="_blank"
+                <a
+                  href="#SonyaSlegersResume082018.pdf"
+                  target="_blank"
+                  onclick="toggleOverlay()"
                   >Resume</a
                 >
               </li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="#contact" onclick="toggleOverlay()">Contact</a></li>
             </ul>
           </div>
-        </div>
-        <div class="desktop-nav-menu">
-          <a class="nav-link" href="#home">Portfolio</a>
-          <a class="nav-link" href="#about">About</a>
-          <a
-            class="nav-link"
-            href="SonyaSlegersResume082018.pdf"
-            target="_blank"
-            >Resume</a
-          >
-          <a class="nav-link" href="#contact">Contact Me</a>
         </div>
       </nav>
     </header>
